hphp/hack/test/typecheck/anon_fun/anon1.php.exp
File "anon1.php", line 9, characters 5-6:
Variable $x is undefined, or not always defined (did you mean $y instead?) (Naming[2050])
